RESOLVED FIXED 254339
@counter-style rule can't redefine certain predefined styles.
https://bugs.webkit.org/show_bug.cgi?id=254339
Summary @counter-style rule can't redefine certain predefined styles.
Vitor Roriz
Reported 2023-03-23 09:32:51 PDT
User is allowed to redefine @counter-style rules predefined by user-agent, except if the rules are: Except for "decimal, disc, square, circle, disclosure-open, and disclosure-closed" according to https://w3c.github.io/csswg-drafts/css-counter-styles/#the-counter-style-rule. We currently just avoid 'decimal' and 'disc' from being redefined.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-03-23 09:33:02 PDT
Vitor Roriz
Comment 2 2023-03-23 09:44:31 PDT
EWS
Comment 3 2023-03-23 14:23:26 PDT
Committed 262038@main (5507daf4822f): <https://commits.webkit.org/262038@main> Reviewed commits have been landed. Closing PR #11867 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.