@counter-style rule can't redefine certain predefined styles. https://bugs.webkit.org/show_bug.cgi?id=254339 rdar://107138989

User is allowed to redefine @counter-style rules predefined by user-agent,
except if the rules are:
"decimal, disc, square, circle, disclosure-open, and disclosure-closed",
according to https://w3c.github.io/csswg-drafts/css-counter-styles/#the-counter-style-rule.

We currently just avoid 'decimal' and 'disc' from being redefined.
This patch add the remaining styles that must be excluded from redefinition.

Reviewed by Tim Nguyen.

* LayoutTests/imported/w3c/web-platform-tests/css/css-counter-styles/counter-style-at-rule/name-syntax-expected.txt:
* Source/WebCore/css/parser/CSSPropertyParserHelpers.cpp:
(WebCore::CSSPropertyParserHelpers::consumeCounterStyleNameInPrelude):

Canonical link: https://commits.webkit.org/262038@main